@@ -31,7 +31,7 @@ spring:
 
 #My batis
 mybatis:
-  mapper-locations: classpath:mappers/*.xml
+  mapper-locations: classpath*:mappers/*.xml
 
 # Logger configuration
 logging:
