@@ -1,0 +1,2 @@
+
+alter table COMPANY add constraint unique_company_identifier unique (company_id);
