@@ -1,0 +1,14 @@
+package com.agh.hydra.common.model;
+
+import lombok.Value;
+
+import javax.validation.constraints.Min;
+import javax.validation.constraints.NotNull;
+
+@Value(staticConstructor = "of")
+public class InformationId implements ValueObject<Long>{
+
+    @Min(0)
+    @NotNull
+    Long value;
+}
