@@ -1,0 +1,10 @@
+package com.agh.hydra.common.model;
+
+public enum ProgrammingLanguage {
+    C, CPP, C_SHARP, OBJECTIVE_C,
+    JAVA, GROOVY, SCALA,
+    JAVASCRIPT,
+    PYTHON,
+    RUBY,
+    PHP
+}
