@@ -1,0 +1,5 @@
+package com.agh.hydra.common.model;
+
+public enum RecruitmentType {
+    INTERVIEW, TEST
+}
